# aduib-rpc

./: .gitignore  .ruff.toml  README.md  __main2__.py  __main__.py  aduib_rpc.yaml.example  pyproject.toml
.claude/: settings.local.json
.claude/architecture/: architecture-overview.md  development-plan.md  feature-retention-list.md  main-flow-analysis.md  tech-stack.md
.claude/architecture/diagrams/: component-diagram.mmd  request-flow.mmd  system-overview.mmd
.tasks/: phase4.txt
docs/: enterprise_refactoring_plan.md  integration_plan.md  interceptors_guide.md  observability_a2a_plan.md  protocol_v2_checklist.md  protocol_v2_implementation_plan.md  protocol_v2_integration_report.md  protocol_v2_specification.md  streaming_support_matrix.md
scripts/: check_docstring_attrs.py  compile_protos.py  compile_thrift_v2.ps1  json_to_proto.py  sync_proto_thrift_v2.py
src/aduib_rpc/: __init__.py  app.py  exceptions.py  types.py
tests/: client.py  conftest.py  fixtures_service_client_call_module.py  fixtures_service_module.py  grpc_client.py  grpc_server.py  grpc_server_local.py  http_server_local.py  jsonrpc_client.py  jsonrpc_server.py  rest_client.py  rest_server.py  server.py  test.py  test_app_end_to_end_registry_discovery.py  test_async_generator_handling.py  test_client_completion_async_iterator_contract.py  test_client_pool_reuse.py  test_default_request_handler_init.py  test_default_request_handler_method_parsing.py  test_deprecated_runtime_views.py  test_e2e_local_transports.py  test_exceptions.py  test_jsonrpc_handler_error_shape.py  test_lb_meta_injection.py  test_long_task.py  test_method_name.py  test_otel_grpc_metadata_propagation.py  test_phase2.py  test_phase3.py  test_phase4.py  test_protocol_v2.py  test_registry_factory.py  test_regressions.py  test_resilience.py  test_rest_handler_error_shape.py  test_rest_retry_behavior.py  test_runtime_injection.py  test_runtime_reset.py  test_server.py  (+8 more)
(+208 files in other folders)
